# elutediff

./: .gitignore  CLAUDE.md  README.md  diffusiongemma_(26b_a4b)_sudoku.py  pyproject.toml
.claude/skills/colab-skill/: SKILL.md
configs/: b4_center_bin.yaml  b6_clean_vector.yaml  b7_noisy_vector.yaml  b8_lappe.yaml  base.yaml  cdf_8000.yaml
data/: README.md
docs/: density-first-revision.md  project-structure.md  training-pipeline.md
experiments/ablation-sweep/: README.md  run_sweep.py  sweep_results.json
experiments/cdf-8000-run/: README.md  curve.json
experiments/cdf-real-run/: README.md  results.json
notebooks/: 01_data_and_targets.ipynb  02_baselines.ipynb  03_diffusiongemma_finetune.ipynb  README.md
scripts/: build_targets.py  download_metlin.py  evaluate.py  install_train_colab.sh  tokenizer_audit.py  train_baselines.py  train_diffusion.py  train_gnn.py
src/elutediff/: __init__.py  audit.py  cli.py  config.py
src/elutediff/data/: __init__.py  graph_features.py  metlin.py  molecules.py  splits.py
src/elutediff/evaluation/: __init__.py  density.py  point_rt.py  ranking.py  uncertainty.py
src/elutediff/models/: __init__.py  baselines.py  diffusion.py  gnn.py
src/elutediff/serialization/: __init__.py  parser.py  prompts.py
src/elutediff/targets/: __init__.py  density.py  noise.py  quantize.py
src/elutediff/training/: __init__.py  block_diffusion.py  sampling.py
tests/: test_audit_and_config.py  test_baselines.py  test_data.py  test_evaluation.py  test_gnn.py  test_graph_features.py  test_serialization.py  test_targets.py  test_training.py
