[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elutediff"
version = "0.0.1"
description = "Molecule-conditioned retention-time density generation with DiffusionGemma (discrete text diffusion) on METLIN SMRT."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Daniel Halwell" }]
keywords = ["retention-time", "diffusion", "metabolomics", "metlin", "gemma", "unsloth"]

# Core dependencies are intentionally light: the tokenization-audit and target
# construction stages (roadmap steps 1-3) run on CPU with only these.
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# RDKit-based molecule parsing, descriptors, fingerprints, graph features, splits.
chem = [
    "rdkit>=2023.9",
]
# Classical / GNN baselines (roadmap step 4).
baselines = [
    "scikit-learn>=1.3",
    "xgboost>=2.0",
]
graph = [
    "torch>=2.4",
    "torch-geometric>=2.5",
]
# DiffusionGemma fine-tuning via Unsloth (roadmap steps 5-8). Pinned to match the
# reference Unsloth DiffusionGemma (26B-A4B) Sudoku notebook.
train = [
    "torch>=2.4",
    "unsloth",
    "transformers==5.11.0",
    "tokenizers>=0.22.0,<=0.23.0",
    "datasets>=4.3.0",
    "accelerate",
    "peft",
    "huggingface_hub>=0.34.0",
]
dev = [
    "pytest>=7.4",
    "ruff>=0.5",
]

[project.scripts]
elutediff = "elutediff.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
